Prod V2/main/default/objects/Package_Line__c/Package_Line__c.object-meta.xml
<CustomObject>
    <description>object to link a package to the products and the correct price</description>
    <label>Package Line</label>
    <nameField>
        <displayFormat>PL{0000000000}</displayFormat>
        <label>Package Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>