Prod V2/main/default/objects/Package_Line__c/fields/Odoo_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_ID__c</fullName>
    <externalId>true</externalId>
    <label>Odoo ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>