Prod V2/main/default/objects/Package_Line__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <description>To which package is this Line linked?</description>
    <label>Package</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Package Lines</relationshipLabel>
    <relationshipName>Package_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>