Prod V2/main/default/objects/Package_Line__c/fields/Part_of_Yearly_Package__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Yearly_Package__c</fullName>
    <description>Formula that checks if the Line is part of an active Yearly Package</description>
    <formula>AND(
 Package__r.Year__c = TRUE,
 Package__r.Active__c = TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part of Yearly Package</label>
    <type>Checkbox</type>
</CustomField>