Prod V2/main/default/objects/Package_Line__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Which price is this line (based on product and pricelist)</description>
    <label>Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>