Prod V2/main/default/objects/Package_Line__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>From Which Price book does this Package Line come from</description>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Package Lines</relationshipLabel>
    <relationshipName>Package_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>